--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,12 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.3",
         "fideloper/proxy": "^4.0",
         "jedrzej/pimpable": "0.0.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "tymon/jwt-auth": "0.5.*",
-        "jedrzej/pimpable": "0.0.4"
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
