--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,29 @@
 {
-  "name": "with-redux",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "8.1.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-redux": "^5.0.1",
-    "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.2"
-  },
-  "license": "ISC"
+	"name": "booking-hotel",
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@babel/core": "^7.4.5",
+		"antd": "^3.19.8",
+		"axios": "^0.19.0",
+		"babel-plugin-import": "^1.12.0",
+		"js-cookie": "^2.2.0",
+		"less": "^3.9.0",
+		"less-vars-to-js": "^1.3.0",
+		"next": "8.1.0",
+		"next-redux-wrapper": "^3.0.0-alpha.3",
+		"react": "16.8.6",
+		"react-dom": "16.8.6",
+		"react-redux": "^7.1.0",
+		"redux": "^4.0.1",
+		"redux-logger": "^3.0.6",
+		"redux-promise-middleware": "^6.1.1",
+		"redux-thunk": "^2.3.0"
+	},
+	"devDependencies": {
+		"@zeit/next-less": "^1.0.1"
+	}
 }
